# go-typescript-bazel-connect-service

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
cmd/protoc-plugin/: BUILD.bazel  main.go
cmd/server/: BUILD.bazel  main.go
eliza/v1/: BUILD.bazel  eliza-ElizaService_connectquery.d.ts  eliza.proto  eliza_connect.d.ts  eliza_pb.d.ts
eliza/v1/elizav1connect/: BUILD.bazel
pkg/roll/: BUILD.bazel
react/: BUILD.bazel  buf.gen.yaml  package.json  tsconfig.json  vite.config.js
react/proto/: BUILD.bazel  eliza-ElizaService_connectquery.d.ts  eliza.proto  eliza_connect.d.ts  eliza_pb.d.ts
react/src/: App.tsx  BUILD.bazel
react/src/nested/: BUILD.bazel  helper.ts
