load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/bhainesva/go-typescript-bazel-connect-service
gazelle(name = "gazelle")

# adding rule to update deps
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "basic-gazelle_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/rules_go/examples/basic-gazelle",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd",
        "@io_k8s_klog_v2//:klog",
    ],
)

go_binary(
    name = "basic-gazelle",
    embed = [":go-typescript-bazel-connect-service_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go-typescript-bazel-connect-service_lib",
    srcs = ["main.go"],
    importpath = "github.com/bhainesva/go-typescript-bazel-connect-service",
    visibility = ["//visibility:private"],
    deps = [
        "@rules_go//examples/basic-gazelle/cmd:go_default_library",
        "@io_k8s_klog_v2//:klog",
    ],
)
