load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:eslint/package_json.bzl", eslint_bin = "bin")

package(default_visibility = ["//:__subpackages__"])

# gazelle:prefix github.com/bhainesva/go-typescript-bazel-connect-service
gazelle(name = "gazelle")

# adding rule to update deps
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "basic-gazelle_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/rules_go/examples/basic-gazelle",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd",
        "@io_k8s_klog_v2//:klog",
    ],
)

go_binary(
    name = "basic-gazelle",
    embed = [":go-typescript-bazel-connect-service_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go-typescript-bazel-connect-service_lib",
    srcs = ["main.go"],
    importpath = "github.com/bhainesva/go-typescript-bazel-connect-service",
    visibility = ["//visibility:private"],
    deps = [
        "@rules_go//examples/basic-gazelle/cmd:go_default_library",
        "@io_k8s_klog_v2//:klog",
    ],
)


## Copied from /examples/frontend
# Root BUILD file for all frontend examples

# Create the root of the "virtual store" of npm dependencies under bazel-out.
# This must be done in the package where the pnpm workspace is rooted.
npm_link_all_packages(name = "node_modules")

eslint_bin.eslint_binary(name = "eslint")
