bazel_dep(name = "rules_go", version = "0.48.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.20.14")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_rules_go_examples_basic_gazelle",
    "com_github_spf13_cobra",
    "com_connectrpc_connect",
    "io_k8s_klog_v2",
    "org_golang_x_net",
    "org_golang_google_protobuf",
)

bazel_dep(name = "gazelle", version = "0.37.0")
