load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/bhainesva/go-typescript-bazel-connect-service/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//eliza/v1:elizav1_go_connect_proto",
        "//eliza/v1:elizav1_go_proto",
        "@com_connectrpc_connect//:connect",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
