load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "elizav1_proto",
    srcs = ["eliza.proto"],
)

go_proto_library(
    name = "elizav1_go_proto",
    compilers = [
        "@rules_go//proto:go_grpc",
    ],
    importpath = "github.com/bhainesva/go-typescript-bazel-connect-service/gen/eliza/v1",
    proto = ":elizav1_proto",
)
