load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:compiler.bzl", "go_proto_compiler")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "elizav1_proto",
    srcs = ["eliza.proto"],
)

go_proto_library(
    name = "elizav1_go_proto",
    compilers = [
        "@rules_go//proto:go_grpc",
    ],
    importpath = "github.com/bhainesva/go-typescript-bazel-connect-service/gen/eliza/v1",
    proto = ":elizav1_proto",
)

go_proto_compiler(
    name = "connect_go_proto_compiler_local",
    plugin = "//cmd/protoc-plugin:protoc-gen-protoc-plugin",
    suffix = ".connect.go",
    visibility = ["//visibility:public"],
    deps = ["@com_connectrpc_connect//:go_default_library"],
)

go_proto_library(
    name = "elizav1_go_connect_proto",
    compilers = [
        ":connect_go_proto_compiler_local",
    ],
    importpath = "github.com/bhainesva/go-typescript-bazel-connect-service/gen/eliza/v1/elizav1connect",
    proto = "//eliza/v1:elizav1_proto",
    deps = ["//eliza/v1:elizav1_go_proto"]
)