load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:proto.bzl", "ts_proto_library")
load("@rules_go//proto:compiler.bzl", "go_proto_compiler")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "elizav1_proto",
    srcs = ["eliza.proto"],
)

go_proto_library(
    name = "elizav1_go_proto",
    compilers = [
        "@rules_go//proto:go_grpc",
    ],
    importpath = "github.com/bhainesva/go-typescript-bazel-connect-service/gen/eliza/v1",
    proto = ":elizav1_proto",
)

go_proto_compiler(
    name = "connect_go_proto_compiler_local",
    plugin = "//cmd/protoc-plugin:protoc-gen-protoc-plugin",
    suffix = ".connect.go",
    visibility = ["//visibility:public"],
    deps = ["@com_connectrpc_connect//:go_default_library"],
)

go_proto_library(
    name = "elizav1_go_connect_proto",
    compilers = [
        ":connect_go_proto_compiler_local",
    ],
    importpath = "github.com/bhainesva/go-typescript-bazel-connect-service/gen/eliza/v1/elizav1connect",
    proto = "//eliza/v1:elizav1_proto",
    deps = ["//eliza/v1:elizav1_go_proto"],
)

ts_proto_library(
    name = "eliza_ts_proto",
    copy_files = True,
    gen_connect_es = True,
    gen_connect_query = True,
    gen_connect_query_service_mapping = {
        "eliza.proto": ["ElizaService"],
    },
    node_modules = "//:node_modules",
    proto = ":elizav1_proto",
)

js_library(
    name = "proto",
    srcs = [":package.json"],
    deps = ["eliza_ts_proto"],
)
