load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:proto.bzl", "ts_proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_srcs = ["eliza.proto"]

proto_library(
    name = "eliza_proto",
    srcs = proto_srcs,
)

ts_proto_library(
    name = "eliza_ts_proto",
    copy_files = True,
    gen_connect_es = True,
    gen_connect_query = True,
    gen_connect_query_service_mapping = {
        "eliza.proto": ["ElizaService"],
    },
    node_modules = "//react:node_modules",
    proto = ":eliza_proto",
)

js_library(
    name = "proto",
    srcs = [":package.json"],
    deps = ["eliza_ts_proto"],
)

proto_library(
    name = "eliza_v1_proto",
    srcs = ["eliza.proto"],
)

go_proto_library(
    name = "eliza_v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/bhainesva/go-typescript-bazel-connect-service/react/proto",
    proto = ":eliza_v1_proto",
)
