load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_go//proto:compiler.bzl", "go_proto_compiler")

package(default_visibility = ["//visibility:public"])

go_proto_compiler(
    name = "connect_go_proto_compiler",
    plugin = "@com_connectrpc_connect//cmd/protoc-gen-connect-go:protoc-gen-connect-go",
    suffix = ".connect.go",
    visibility = ["//visibility:public"],
    deps = ["@com_connectrpc_connect//:go_default_library"],
)

go_proto_compiler(
    name = "connect_go_proto_compiler_local",
    plugin = "//cmd/protoc-plugin:protoc-gen-protoc-plugin",
    suffix = ".connect.go",
    visibility = ["//visibility:public"],
    deps = ["@com_connectrpc_connect//:go_default_library"],
)

go_proto_library(
    name = "elizav1_go_proto",
    compilers = [
        # "@rules_go//proto:go_grpc",
        ":connect_go_proto_compiler_local",
    ],
    importpath = "github.com/bhainesva/go-typescript-bazel-connect-service/gen/eliza/v1/elizav1connect",
    proto = "//eliza/v1:elizav1_proto",
    deps = ["//eliza/v1:elizav1_go_proto"]
)
